Color contrast fixes

--- a/assets/stylesheets/_colors.scss
+++ b/assets/stylesheets/_colors.scss
@@ -12,7 +12,7 @@ $active-nav-color: $purple;
 $link-color: darken(#000, 20%);
 
 $text-kinda-muted-color: hsla(300, 0%, 17%, 0.75);
-$text-muted-color: #5f5e5f;
+$text-muted-color: #4D4C4D;
 $text-very-muted-color: #9fa0a0;
 
 $default-text-color: hsla(0, 0%, 15%, 0.98);
