--- a/assets/stylesheets/_global.scss
+++ b/assets/stylesheets/_global.scss
@@ -50,6 +50,10 @@
 
   #footer {
     background-color: rgb(50, 50, 50);
+
+    h4 {
+      color: #C2C1C2;
+    }
   }
 }
 
@@ -98,6 +102,10 @@ body.dark-mode {
 
   #footer {
     background-color: rgb(50, 50, 50);
+
+    h4 {
+      color: #C2C1C2;
+    }
   }
 }
 
@@ -264,7 +272,6 @@ hr {
   }
 
   h4 {
-    color: $text-muted-color;
     font-size: 1.2rem;
     font-weight: 400;
     line-height: 2rem;
